      render it to a raster image and use this Pixmap as the icon file -
      otherwise the icon will not show up. Also change the icon size back to
      16x16 px, that's big enough.
    - src/onmainwindow.cpp: remove left-over debug test message.
    - {unixhelper.{cpp,h},x2goclient.pro{,.maemo}}: add unixhelper stub.
    - unixhelper.{cpp,h}: implement cleanup program for process group.

  [ Bernard Cafarelli ]
  * New upstream version (4.0.5.3):
    - {res/,x2goclient.pro}: rename .rcc files to .qrc. Fixes: #1096. "rcc" is
      the extension for compiled resource files, whereas "qrc" is the mapping
      file. Qt5 stumbles upon that - i.e., it doesn't try to compile files
      with the "rcc" extension, while Qt4 did.
    - res/: fix up previous change, the renaming of changelog.qrc was not
      correctly committed.

  [ Jason Alavaliant ]
  * New upstream version (4.0.5.3):
    - src/{onmainwindow.{cpp,h},help.cpp}: modify autostart option to support
      multiple autostart apps at the same time. Fixes: #1024.

  [ Oleksandr Shneyder ]
  * New upstream version (4.0.5.3):
    - src/onmainwindow.cpp: fix SSHFS on Windows client. Fixes: #1105.

 -- X2Go Release Manager <git-admin@x2go.org>  Mon, 19 Sep 2016 09:07:07 +0200

x2goclient (4.0.5.2-0x2go1) unstable; urgency=medium

  [ Klaus Ade Johnstad ]
  * New upstream version (4.0.5.2):
    - res/i18n/x2goclient_nb_no.ts: update Bokmål (Norway) translation file.

  [ Mihai Moldovan ]
  * New upstream release (4.0.5.2):
    - res/i18n/x2goclient_nb_no.ts: fixup translation by respecting the
      original messages' format, typo fixes and other changes.
    - res/i18n/x2goclient_fi.ts: fixup translation by respecting the original
      messages' format and other changes.
    - src/{ongetpass,onmainwindow}.cpp: fixup QPlastiqueStyle usage on Qt5.
      This particular style has been removed/replaced by Fusion, which
      incorporates features of both Plastique and Clearlooks styles.