@@ -38,6 +38,7 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - src/onmainwindow.cpp: remove left-over debug test message.
     - {unixhelper.{cpp,h},x2goclient.pro{,.maemo}}: add unixhelper stub.
     - unixhelper.{cpp,h}: implement cleanup program for process group.
+    - x2goclient.cpp: wrap X2Go Client main function and use that.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
